syntax = "proto3";

package de.unistuttgart.isw.sfsc.protocol.control;

option java_multiple_files = true;

message ControlHeader {
  ControlMessageType type = 1;
}

enum ControlMessageType {
  WELCOME = 0;
}
