syntax = "proto3";

package de.unistuttgart.isw.sfsc.protocol.control;

import "session/welcome.proto";

option java_multiple_files = true;

message SessionMessage {
  oneof payload {
    WelcomeMessage welcome_message = 2;
  }
}

